--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
     "@types/echarts": "^4.9.16",
-    "echarts": "^5.3.3"
+    "echarts": "^5.3.3",
+    "vue": "2.6.11",
+    "vue-hot-reload-api": "^2.3.4"
+  },
+  "devDependencies": {
+    "@types/vue": "^2.0.0",
+    "@vue/component-compiler-utils": "^3.3.0",
+    "vue-template-compiler": "2.6.11"
   }
 }
